syntax = "proto3";
package v1;

import "google/protobuf/wrappers.proto";
import "v1/common.proto";

option go_package = ".;v1";

message Image {
  string id = 1;
  string src = 2;
  string alt = 3;
  int32 width = 4;
  int32 height = 5;
}

// 创建商品
message CreateProductRequest {
  string title = 1;
  string description = 2;
  bool published = 3;
  repeated Image images = 4;

  message variant {
    double price = 1;
    double compare_at_price = 2;
    string barcode = 3;
    int64 inventory_quantity = 4;
  }
  repeated variant variants = 5;
}

// 更新商品
message UpdateProductRequest {
  string id = 1;
  google.protobuf.StringValue title = 2;
  google.protobuf.StringValue description = 3;
  google.protobuf.BoolValue published = 4;

  repeated Image images = 5;
  message variant {
    google.protobuf.StringValue id = 1;
    google.protobuf.StringValue barcode = 2;
    google.protobuf.DoubleValue price = 3;
    google.protobuf.DoubleValue compare_at_price = 4;
    google.protobuf.Int64Value inventory_quantity = 5;
  }
  repeated variant variants = 6;
}

message DeleteProductRequest {
  string id=1;
}

message ProductResponse {
  string id = 1;
  string title = 2;
  string description = 4;
  string published_at = 5;
  int64 inventory_quantity = 6;
  string created_at = 7;
  string updated_at = 8;
  bool published = 9;
  repeated Image images = 10;

  message variant {
    string id = 1;
    string product_id = 2;
    int64 position = 3;
    double price = 4;
    double compare_at_price = 5;
    int64 inventory_quantity = 6;
    string created_at = 7;
    string updated_at = 8;
  }
  repeated variant variants = 11;
}

message GetProductRequest {
}

// 获取商品列表
message ListProductRequest {
  int64 page=1;
  int64 per_page=2;
}
message ListProductResponse {
  int64 count=1;
  repeated ProductResponse products=2;
}
